@@ -20,7 +20,6 @@ import io.trino.sql.tree.Identifier;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.HashSet;
 import java.util.Iterator;
 import java.util.List;
@@ -30,6 +29,7 @@ import java.util.regex.Pattern;
 
 import static com.google.common.collect.ImmutableSet.toImmutableSet;
 import static io.trino.grammar.sql.SqlKeywords.sqlKeywords;
+import static java.util.Locale.ENGLISH;
 
 public final class ReservedIdentifiers
 {
@@ -41,12 +41,17 @@ public final class ReservedIdentifiers
 
     private ReservedIdentifiers() {}
 
+    private static final Set<String> RESERVED_IDENTIFIERS = sqlKeywords().stream()
+            .filter(ReservedIdentifiers::isNotIdentifier)
+            .sorted()
+            .collect(toImmutableSet());
+
     @SuppressWarnings("CallToPrintStackTrace")
-    public static void main(String[] args)
+    static void main(String[] args)
     {
         if ((args.length == 2) && args[0].equals("validateDocs")) {
             try {
-                validateDocs(Paths.get(args[1]));
+                validateDocs(Path.of(args[1]));
             }
             catch (Throwable t) {
                 t.printStackTrace();
@@ -110,13 +115,15 @@ public final class ReservedIdentifiers
 
     public static Set<String> reservedIdentifiers()
     {
-        return sqlKeywords().stream()
-                .filter(ReservedIdentifiers::reserved)
-                .sorted()
-                .collect(toImmutableSet());
+        return RESERVED_IDENTIFIERS;
     }
 
     public static boolean reserved(String name)
+    {
+        return RESERVED_IDENTIFIERS.contains(name.toUpperCase(ENGLISH));
+    }
+
+    private static boolean isNotIdentifier(String name)
     {
         try {
             return !(PARSER.createExpression(name) instanceof Identifier);
