@@ -25,7 +25,6 @@ import java.io.IOException;
 import java.io.PrintStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
@@ -199,7 +198,7 @@ public class Verifier
             QueryResult controlResult = validator.getControlResult();
             if (simplifiedControlQueriesGenerationEnabled && controlResult.getState() == SUCCESS) {
                 QueryPair queryPair = validator.getQueryPair();
-                Path path = Paths.get(format(
+                Path path = Path.of(format(
                         "%s/%s/%s/%s.sql",
                         simplifiedControlQueriesOutputDirectory,
                         runId,
@@ -345,8 +344,8 @@ public class Verifier
 
     private static boolean shouldAddStackTrace(Exception e)
     {
-        if (e instanceof TrinoException) {
-            ErrorCode errorCode = ((TrinoException) e).getErrorCode();
+        if (e instanceof TrinoException trinoException) {
+            ErrorCode errorCode = trinoException.getErrorCode();
             if (EXPECTED_ERRORS.contains(errorCode)) {
                 return false;
             }
