@@ -48,6 +48,7 @@ import io.trino.sql.tree.Explain;
 import io.trino.sql.tree.ExplainAnalyze;
 import io.trino.sql.tree.Insert;
 import io.trino.sql.tree.RefreshMaterializedView;
+import io.trino.sql.tree.RefreshView;
 import io.trino.sql.tree.RenameColumn;
 import io.trino.sql.tree.RenameMaterializedView;
 import io.trino.sql.tree.RenameTable;
@@ -76,7 +77,7 @@ import java.io.UncheckedIOException;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.URLClassLoader;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.sql.Driver;
 import java.sql.DriverManager;
 import java.sql.SQLException;
@@ -90,7 +91,6 @@ import java.util.concurrent.ExecutionException;
 import java.util.concurrent.ExecutorCompletionService;
 import java.util.concurrent.ExecutorService;
 
-import static com.google.common.base.MoreObjects.firstNonNull;
 import static com.google.common.base.Preconditions.checkArgument;
 import static com.google.common.base.Throwables.throwIfUnchecked;
 import static com.google.common.collect.ImmutableList.toImmutableList;
@@ -99,6 +99,7 @@ import static io.trino.verifier.QueryType.MODIFY;
 import static io.trino.verifier.QueryType.READ;
 import static io.trino.verifier.VerifyCommand.VersionProvider;
 import static java.util.Objects.requireNonNull;
+import static java.util.Objects.requireNonNullElse;
 import static java.util.concurrent.Executors.newFixedThreadPool;
 import static java.util.concurrent.TimeUnit.MINUTES;
 import static picocli.CommandLine.IVersionProvider;
@@ -217,7 +218,7 @@ public class VerifyCommand
         ImmutableList.Builder<URL> urlList = ImmutableList.builder();
         File driverPath = new File(path);
         if (!driverPath.isDirectory()) {
-            urlList.add(Paths.get(path).toUri().toURL());
+            urlList.add(Path.of(path).toUri().toURL());
             return urlList.build();
         }
         File[] files = driverPath.listFiles((dir, name) -> {
@@ -231,7 +232,7 @@ public class VerifyCommand
             if (file.isDirectory()) {
                 continue;
             }
-            urlList.add(Paths.get(file.getAbsolutePath()).toUri().toURL());
+            urlList.add(Path.of(file.getAbsolutePath()).toUri().toURL());
         }
         return urlList.build();
     }
@@ -375,19 +376,22 @@ public class VerifyCommand
         if (statement instanceof CreateTableAsSelect) {
             return CREATE;
         }
-        if (statement instanceof CreateView) {
-            if (((CreateView) statement).isReplace()) {
+        if (statement instanceof CreateView createView) {
+            if (createView.isReplace()) {
                 return MODIFY;
             }
             return CREATE;
         }
-        if (statement instanceof CreateMaterializedView) {
-            if (((CreateMaterializedView) statement).isReplace()) {
+        if (statement instanceof CreateMaterializedView createMaterializedView) {
+            if (createMaterializedView.isReplace()) {
                 return MODIFY;
             }
             return CREATE;
         }
         if (statement instanceof RefreshMaterializedView) {
+            return MODIFY;
+        }
+        if (statement instanceof RefreshView) {
             return MODIFY;
         }
         if (statement instanceof DropMaterializedView) {
@@ -405,8 +409,8 @@ public class VerifyCommand
         if (statement instanceof Explain) {
             return READ;
         }
-        if (statement instanceof ExplainAnalyze) {
-            return statementToQueryType(((ExplainAnalyze) statement).getStatement());
+        if (statement instanceof ExplainAnalyze explainAnalyze) {
+            return statementToQueryType(explainAnalyze.getStatement());
         }
         if (statement instanceof Insert) {
             return MODIFY;
@@ -500,7 +504,7 @@ public class VerifyCommand
         public String[] getVersion()
         {
             String version = getClass().getPackage().getImplementationVersion();
-            return new String[] {spec.name() + " " + firstNonNull(version, "(version unknown)")};
+            return new String[] {spec.name() + " " + requireNonNullElse(version, "(version unknown)")};
         }
     }
 
