@@ -16,10 +16,9 @@ package io.trino.testing;
 import com.fasterxml.jackson.annotation.JsonCreator;
 import com.fasterxml.jackson.annotation.JsonIgnore;
 import com.fasterxml.jackson.annotation.JsonProperty;
-import com.fasterxml.jackson.core.JsonProcessingException;
 import com.google.errorprone.annotations.DoNotCall;
+import io.airlift.json.JsonCodec;
 import io.airlift.slice.Slice;
-import io.trino.client.JsonCodec;
 import io.trino.spi.Plugin;
 import io.trino.spi.spool.SpooledLocation;
 import io.trino.spi.spool.SpooledLocation.DirectLocation;
@@ -36,7 +35,6 @@ import java.io.OutputStream;
 import java.io.UncheckedIOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.time.Instant;
 import java.util.List;
 import java.util.Map;
@@ -46,9 +44,10 @@ import java.util.concurrent.atomic.AtomicLong;
 
 import static com.google.common.base.MoreObjects.toStringHelper;
 import static com.google.common.io.MoreFiles.deleteRecursively;
+import static io.airlift.json.JsonCodec.jsonCodec;
 import static io.airlift.slice.Slices.utf8Slice;
-import static io.trino.client.JsonCodec.jsonCodec;
 import static java.nio.file.StandardOpenOption.CREATE_NEW;
+import static java.time.temporal.ChronoUnit.MINUTES;
 import static java.util.Objects.requireNonNull;
 
 public class LocalSpoolingManager
@@ -96,12 +95,7 @@ public class LocalSpoolingManager
     @Override
     public SpooledSegmentHandle handle(Slice identifier, Map<String, List<String>> headers)
     {
-        try {
-            return HANDLE_CODEC.fromJson(identifier.toStringUtf8());
-        }
-        catch (JsonProcessingException e) {
-            throw new UncheckedIOException(e);
-        }
+        return HANDLE_CODEC.fromJson(identifier.toStringUtf8());
     }
 
     @Override
@@ -182,7 +176,7 @@ public class LocalSpoolingManager
         @Override
         public Instant expirationTime()
         {
-            return Instant.MAX;
+            return Instant.now().plus(5, MINUTES);
         }
 
         @JsonIgnore
@@ -226,7 +220,7 @@ public class LocalSpoolingManager
                 @JsonProperty("encoding") String encoding,
                 @JsonProperty("path") String path)
         {
-            return new LocalSpooledSegmentHandle(encoding, Paths.get(path));
+            return new LocalSpooledSegmentHandle(encoding, Path.of(path));
         }
     }
 }
